# safe-relay-rs

./: Cargo.toml  Dockerfile  publish.sh  readme.md
abi/: proxy_factory_abi.json
hardhat/: hardhat.config.ts  package.json
src/: ethers_ext.rs  main.rs  safe.rs  safe_config.rs  safe_handlers.rs  safe_service.rs  safe_use_case.rs
