[package]
name = "smartwallet-api"
version = "0.1.0"
edition = "2021"
license = "License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
env_logger = "0.9.1"
log = "0.4.17"
tokio = { version = "1.21.0", features = ["full"] }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
dotenv = "0.15.0"
serde_json = "1.0.87"
eth-encode-packed = "0.1.0"
primitive-types = "0.12.1"
serde = { version = "1.0.147", features = ["derive"] }
actix-cors = "0.6.4"
utoipa = { version = "2.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2.0.1", features = ["actix-web"] }
async-trait = "0.1.58"
